pong-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      containers:
        - name: pong-app-container
          image: pong-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
