pong-app/manifests/rollout-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-stable-svc
  namespace: exercises
spec:
  selector:
    app: pong-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-canary-svc
  namespace: exercises
spec:
  selector:
    app: pong-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
