pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-app-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pong-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
