pong-app/manifests/todo-backend-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: exercises
spec:
  type: ExternalName
  externalName: todo-backend-svc.project.svc.cluster.local
  ports:
    - port: 3000
      targetPort: 3000
