pong-app/manifests/canary-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-stable-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pong-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-canary-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pong-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-app-ingress
  namespace: exercises
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pong-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pong-app-stable-svc
                port:
                  number: 3000
